feat: add graalvm native-image metadata for cli
Co-authored-by: brunoborges <129743+brunoborges@users.noreply.github.com>